# ContenderSim

./: config.yaml  contender.py  experiment.py  pyproject.toml  scoring.py  selector.py
