[tool.poetry]
name = "contender-sim"
version = "0.1.0"
description = ""
authors = ["Nikola Rahman <nikola.rahman.89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyterlab = "^4.2.5"
plotly = "^5.24.1"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
